# AcceleratedCPP

./: .gitignore  README.md  使用 VSCode 在 Mac 上配置 C:C++ 调试环境 – Bill Chen's Blog.webarchive
algorithm/: CMakeLists.txt  copy.cpp  copy.h  find.cpp  find.h  main.cpp
algorithm/test/: CMakeLists.txt  test.cpp
docs/: .Markdown常用语法（缩进、换行、字体大小等） - 东方电视台的博客.webarchive.icloud  .使用 VSCode 在 Mac 上配置 C:C++ 调试环境 – Bill Chen's Blog.webarchive.icloud  Develop C++ project using VS Code on MacOS and build project by CMake.md
fstream/: CMakeLists.txt  main.cpp
map/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt  main.cpp
test/: main.cpp
为姓名装框/: main.cpp
用中值代替平均值/: main.cpp
组织程序和数据/: CMakeLists.txt
组织程序和数据/include/: Student_info.h  grade.h
组织程序和数据/src/: Student_info.cpp  grade.cpp  main.cpp
计算学生成绩/: main.cpp
